<resources>
    <string-array name="fragment_list">
        <item>Horizontal</item>
        <item>Vertical</item>
    </string-array>
    <string name="app_name">HanumanApp</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1146926275317583</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="about_us_data">We are fully committed to building innovations that we help benifit all.</string>
    <string name="end_user">This End User License Agreement ("Agreement") is between you and Hello Hanuman and governs use
        of this app made available through the Apple App Store.By installing the Hello Hanuman App , you agree to be bound by this
        agreement and understand that there is no tolerance for objectionable content.if you do not agree with the terms and
        condition of this agreement ,you are not entitled to use the hanuman app"
    </string>
    <string name="end_user_one">In order to ensure Hello Hanuman provides the best experience possible for everyone,
        we strongly enforce a no tolerance policy for objectionable content. If you see inappropriate content please use the
        "Report as offensive" feature found each post
    </string>
    <string name="parties">This Agreement is between you and Hello Hanuman only, and not Apple. Inc. (Apple).
    Notwithstanding the foregoing, you acknowledge that apple and its subsiadairies are third party benefeciaries
    of this Agreement and apple has the right to enforce this Agreement aganist you. Hello Hanuman, not Apple
    is solely responsible for this Hello Hanuman App</string>
    <string name="audio_video_of_hanuman_ji">Shri guru Charan Sarooja-raj Nija manu Mukara Sudhaari Barnau Bimala
        Yasha Jo Dayaka Phala Chari Budhee-Heen Thanu Janikay Sumirow Pavana Kumara Bala-Budhee Vidya Dehoo Mohee
        Harahu Kalesha Vikaara
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="first_doha">Aarthi jai Hanumaannaa lalaa ki,Dushta dalana Raghunatha kala ki
    </string>
    <string name="first_doha_hindi">आरती किजे हनुमान लला की | दुष्ट दलन रघुनाथ कला की ॥</string>
    <string name="second_doha"> Jaake bal se girivira kampe, Bhootha piscchaa nikata nahi jaanke</string>
    <string name="second_doha_hindi">जाके बल से गिरवर काँपे | रोग दोष जाके निकट ना झाँके ॥ </string>
    <string name="third_doha">Anjani putra maha baldai, Santan ke prabhu sada sahai</string>
    <string name="third_doha_hindi">अंजनी पुत्र महा बलदाई | संतन के प्रभु सदा सहाई ॥</string>
    <string name="privacy_policy_first">This privacy policy governs your use of the software application Hello Hanuman (“Application”) for mobile devices that was created by Thareja Inc.. The Application is a collection of prayers, videos, audios, and a mala.</string>
    <string name="privacy_application">What information does the Application obtain and how is it used? </string>
    <string name="uses">Uses Provided Application</string>
    <string name="privacy_policy_second">The Application obtains the information you provide when you download and register the Application. Registration with us is optional. However, please keep in mind that you may not be able to use some of the features offered by the Application unless you register with us.
                When you register with us and use the Application, you generally provide (a) your name, email address, age, user name, password and other registration information; (b) transaction-related information, such as when you make purchases, respond to any offers, or download or use applications from us; (c) information you provide us when you contact us for help; (d) credit card information for purchase and use of the Application, and; (e) information you enter into our system when using the Application, such as contact information and project management information.
                We may also use the information you provided us to contact your from time to time to provide you with important information, required notices and marketing promotions.</string>
    <string name="automatically_colledted_information_title">Automatically Collected Information</string>
    <string name="automatically_collected_info">In addition, the Application may collect certain information automatically, including, but not limited to, the type of mobile device you use, your mobile devices unique device ID, the IP address of your mobile device, your mobile operating system, the type of mobile Internet browsers you use, and information about the way you use the Application.
                Does the Application collect precise real time location information of the device?
                This Application does not collect precise information about the location of your mobile device.
                Do third parties see and/or have access to information obtained by the Application?
                Yes. We will share your information with third parties only in the ways that are described in this privacy statement.
                We may disclose User Provided and Automatically Collected Information: as required by law, such as to comply with a subpoena, or similar legal process;
                when we believe in good faith that disclosure is necessary to protect our rights, protect your safety or the safety of others, investigate fraud, or respond to a government request;
                with our trusted services providers who work on our behalf, do not have an independent use of the information we disclose to them, and have agreed to adhere to the rules set forth in this privacy statement.
                if Thareja Inc. is involved in a merger, acquisition, or sale of all or a portion of its assets, you will be notified via email and/or a prominent notice on our Web site of any change in ownership or uses of this information, as well as any choices you may have regarding this information.
                to advertisers and third party advertising networks and analytics companies as described in the section below </string>
     <string name="Automatic_Data_Collection_and_Advertising">Automatic Data Collection and Advertising</string>
     <string name="Automatic_Data_Collection_and_Advertising_info">We may work with analytics companies to help us understand how the Application is being used, such as the frequency and duration of usage.
         We work with advertisers and third party advertising networks, who need to know how you interact with advertising provided in the Application which helps us keep the cost of the Application low. Advertisers and advertising networks use some of the information collected by the Application, including,
         but not limited to, the unique identification ID of your mobile device and your mobile telephone number.
         To protect the anonymity of this information, we use an encryption technology to help ensure that these third parties can’t identify you personally.
         These third parties may also obtain anonymous information about other applications you’ve downloaded to your mobile device,
         the mobile websites you visit, your non-precise location information (e.g., your zip code), and other non- precise location information in order to help analyze and serve anonymous targeted advertising on the Application and elsewhere. We may also share encrypted versions of information you have provided in order to enable our partners to append other available information about you for analysis or advertising related use.
         If you’d like to opt-out from third party use of this type of information to help serve targeted advertising, please visit the section entitled “Opt-out” below.</string>
    <string name="opt_out_rights">What are my opt-out rights?</string>
    <string name="opt_out_rights_info">There are multiple opt-out options for users of this Application:
        Opt-out of all information collection by uninstalling the Application:
        You can stop all collection of information by the Application easily by uninstalling the Application.
        You may use the standard uninstall processes as may be available as part of your mobile device or via the mobile application marketplace or network.
        You can also request to opt-out via email, at privacy@thareja.org
        Opt-out from the use of information to serve targeted advertising by advertisers and/or third party network advertisers: you may at any time opt-out from further allowing us to have access to your location data by disabling access in the mobile settings section of your phone.. </string>
    <string name="Data_Retention_Policy">Data Retention Policy, Managing Your Information </string>
    <string name="data_retention_info">We will retain User Provided data for as long as you use the Application and for a reasonable time thereafter. We will retain Automatically Collected information for up to 24 months and thereafter may store it in aggregate.
        If you’d like us to delete User Provided Data that you have provided via the Application, please contact us at privacy@thareja.org and we will respond in a reasonable time.
        Please note that some or all of the User Provided Data may be required in order for the Application to function properly.</string>
    <string name="children">Children</string>
    <string name="children_info">We do not use the Application to knowingly solicit
        data from or market to children under the age of 13.
        If a parent or guardian becomes aware that his or her child has provided us with information without their consent,
        he or she should contact us at privacy@thareja.org
        We will delete such information from our files within a reasonable time.</string>
    <string name="security">Security</string>
    <string name="security_data">We are concerned about safeguarding the confidentiality of your information.
        We provide physical, electronic, and procedural safeguards to protect information we process and maintain.
        For example, we limit access to this information to authorized employees and contractors who need to know that information in order to operate,
        develop or improve our Application.
        Please be aware that,
        although we endeavor provide reasonable security for information we process and maintain,
        no security system can prevent all potential security breaches.</string>
    <string name="changes">Changes</string>
    <string name="changes_info">This Privacy Policy may be updated from time to time for any reason.
        We will notify you of any changes to our Privacy Policy by posting the new Privacy Policy here and
        informing you via email or text message.
        You are advised to consult this Privacy Policy regularly for any changes,
        as continued use is deemed approval of all changes.
        You can check the history of this policy by clicking here.</string>
    <string name="your_consent">Your Consent</string>
    <string name="your_consent_info">By using the Application,you are consenting to our processing of your information as set forth in this Privacy Policy now and
        as amended by us. "Processing,” means using cookies on a computer/hand held device or using or touching information in any way, including, but not limited to, collecting, storing, deleting, using, combining and disclosing information, all of which activities will take place in the United States.
        If you reside outside the United States your information will be transferred, processed and stored there under United States privacy standards.</string>
</resources>